overflow issue resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1568,7 +1568,7 @@ header {
     left: 0;
     top: 0;
     z-index: 100;
-    padding-top: 94px;
+    padding: 94px 0;
     overflow-y: auto;
   }
 
@@ -1591,7 +1591,7 @@ header {
     z-index: 100;
     padding: 0;
     flex-wrap: nowrap;
-    padding-top: 90px;
+    padding: 90px 0;
     overflow-x:hidden;
     overflow-y: auto;
   }
